# lifelong_mapping

./: .gitignore  README.md  ros2_launcher.sh
Documentation/: index.md  params.md
Documentation/docs/: confidence.md  topics.md
src/submap_map_ap/: CMakeLists.txt  package.xml
src/submap_map_ap/launch/: bookstore_turtlebot.launch.py  bringup_all.launch.py  change_detector.launch.py  cluster_tracker.launch.py  warehouse_turtlebot.launch.py  warehouse_turtlebot_gz.launch.py
src/submap_map_ap/map/Training/: map_2.pgm  map_2.yaml  map_additional_Details.data
src/submap_map_ap/msg/: ChangeList.msg  ChangeObject.msg  GridBounds.msg  GridObjectList.msg  MapGridDefinition.msg  MapGridSummary.msg
src/submap_map_ap/params/: custom_costmap.yaml
src/submap_map_ap/rqt/: my_dashboard.perspective
src/submap_map_ap/src/: amcl_confidence.py  bridge.py  change_labeler.py  change_tracker.py  cluster_labelers.py  costmap_aligner.py  costmap_change_detector.py  costmap_comparator.py  costmap_generator.py  global_memory_visualiser.py  grid_spatial.py  local_costmap_simplifier.py  local_region_inflated_map.py  nearest_neighbour_check.py  orb_match.py  robot_grid_tracker.py  scan_to_costmap_generator.py  tracked_map_changes.py  unexplored_to_free_space.py
src/submap_map_ap/world/: warehouse_turtlebot.sdf
